modificaciones de olvide mi correo
actualizacion

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="form-group"><button class="btn btn-primary btn-block" (click)='iniciarSecion()'type="button">Iniciar sesión</button>
                 </div>
-                <a href="registrar" class="already">Quiero ser empleado</a>
+                <button  class="btn btn-secondary btn-block" (click)='soypendejo()'> Olvide mi contraceña</button> 
             </form>
         </div>
         
