--- a/src/app/empleado/mis-socicitudes/mis-socicitudes.component.html
+++ b/src/app/empleado/mis-socicitudes/mis-socicitudes.component.html
@@ -156,6 +156,7 @@
     
         <th>Cancelar Solicitud</th>
         <th>Ver detalles</th>
+        <th>Estatus</th>
       </tr>
     </thead>
     <tbody>
@@ -168,6 +169,7 @@
          Ver detalles
         </button>
           </td>
+          <td> {{vacante.status}} </td>
       </tr>
     </tbody>
   </table>
