--- a/src/app/empresa/vacantes/vacantes.component.html
+++ b/src/app/empresa/vacantes/vacantes.component.html
@@ -145,7 +145,12 @@
 
  <!--Cuerpo Inicial del componente --> 
 <body>
+  
+<div class="row justify-content-md-center">
+    <div class="col-xs-12 col-sm-10 col-md-9 col-sm-offset-1 col-md-offset 2">
   <h3>Mis Vacantes</h3>
+  
+  
   
   <table class="table table-bordered table-striped tabla" style="margin-top: 40px;" >
     <thead>
@@ -174,7 +179,10 @@
     </tbody>
   </table>
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit" ><a class="button" href="altavacante">Agregar</a></button>
-  </body>
+</div>
+</div>
+
+</body>
 
   
  
